@@ -3,9 +3,6 @@ package com.usersystem.sistemausuariosbackend.config;
 import com.usersystem.sistemausuariosbackend.security.CustomAccessDeniedHandler;
 import com.usersystem.sistemausuariosbackend.security.JwtAuthFilter;
 import com.usersystem.sistemausuariosbackend.security.JwtAuthEntryPoint;
-// Importa UserDetailsServiceImpl si lo usas directamente en algún otro bean de seguridad,
-// aunque no lo veo inyectado en este constructor de WebSecurityConfig.
-// import com.usersystem.sistemausuariosbackend.security.UserDetailsServiceImpl;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -20,13 +17,11 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 
-// --- Importaciones para CORS ---
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
 import java.util.List;
-// --- Fin Importaciones para CORS ---
 
 
 @Configuration
@@ -38,7 +33,6 @@ public class WebSecurityConfig {
     private final JwtAuthFilter jwtAuthFilter;
     private final CustomAccessDeniedHandler customAccessDeniedHandler;
 
-    // Constructor para inyección de dependencias
     public WebSecurityConfig(JwtAuthEntryPoint unauthorizedHandler,
                              JwtAuthFilter jwtAuthFilter,
                              CustomAccessDeniedHandler customAccessDeniedHandler) {
@@ -57,50 +51,41 @@ public class WebSecurityConfig {
         return authenticationConfiguration.getAuthenticationManager();
     }
 
-    // --- Bean para la configuración de CORS ---
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // ¡IMPORTANTE! Aquí debes especificar los orígenes de tu frontend.
-        // Si tu frontend corre en http://localhost:5173, añádelo aquí.
-        // Puedes añadir múltiples orígenes si tu frontend se despliega en diferentes lugares.
-        configuration.setAllowedOrigins(List.of("http://localhost:5173")); // <-- ¡Ajusta este origen!
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH")); // Métodos HTTP permitidos, PATCH es común
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With")); // Cabeceras permitidas
-        configuration.setAllowCredentials(true); // Permite el envío de cookies, cabeceras de autorización, etc.
-        configuration.setMaxAge(3600L); // Tiempo máximo de pre-vuelo (en segundos)
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
+        configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration); // Aplica esta configuración CORS a todas las rutas (/**)
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-    // --- Fin Bean para la configuración de CORS ---
-
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                .csrf(csrf -> csrf.disable()) // Deshabilita CSRF para APIs RESTful con JWT
+                .csrf(csrf -> csrf.disable())
                 .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(unauthorizedHandler) // Para 401 (no autenticado)
-                        .accessDeniedHandler(customAccessDeniedHandler) // Para 403 (autenticado pero sin permiso)
+                        .authenticationEntryPoint(unauthorizedHandler)
+                        .accessDeniedHandler(customAccessDeniedHandler)
                 )
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)) // Configura la sesión como stateless
+                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(authorize -> authorize
-                        .requestMatchers("/api/auth/**").permitAll() // Permite acceso público a todas las rutas de autenticación
-                        .requestMatchers("/api/users/me").authenticated() // /api/users/me requiere autenticación
-                        .requestMatchers("/api/users/**").hasRole("ADMIN") // /api/users/** requiere rol ADMIN
-                        // Aquí puedes añadir más reglas de autorización basadas en roles
-                        // .requestMatchers("/api/supervisors/**").hasRole("SUPERVISOR")
-                        .anyRequest().authenticated() // Cualquier otra petición requiere autenticación
+                        .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/users/me").authenticated()
+                        // CORRECCIÓN: Se usa hasAnyAuthority para evitar el prefijo ROLE_
+                        // Ahora esta regla de seguridad coincidirá con las de los controladores
+                        .requestMatchers("/api/users/**").hasAnyAuthority("ADMIN", "SUPERVISOR")
+                        .requestMatchers("/api/logs/**").hasAnyAuthority("ADMIN", "SUPERVISOR")
+                        .anyRequest().authenticated()
                 );
 
-        // Agrega el filtro JWT antes del filtro de autenticación de usuario y contraseña
         http.addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-
-        // --- Aplica la configuración CORS ---
-        http.cors(cors -> cors.configurationSource(corsConfigurationSource())); // ¡Añade esta línea!
-        // --- Fin Aplicación de CORS ---
+        http.cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
         return http.build();
     }
